// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavBar should render correctly 1`] = `
<div>
  <nav
    class="flex flex-wrap justify-center p-4"
  >
    <a
      class="flex flex-col items-center mx-4 group"
      href="/camping"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Camping Locations
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/activities"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Activities
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/equipment"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Equipment
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/blogs"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Blogs
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
  </nav>
</div>
`;

exports[`NavBar should render correctly Activities 1`] = `
<div>
  <nav
    class="flex flex-wrap justify-center p-4"
  >
    <a
      class="flex flex-col items-center mx-4 group"
      href="/camping"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Camping Locations
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/activities"
    >
      <span
        class="font-acme text-[13px] text-orange-500"
      >
        Activities
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-100 bg-orange-500"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/equipment"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Equipment
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
    <a
      class="flex flex-col items-center mx-4 group"
      href="/blogs"
    >
      <span
        class="font-acme text-[13px] text-white-500"
      >
        Blogs
      </span>
      <span
        class="w-2 h-2 rounded-full transition-opacity opacity-0"
      />
    </a>
  </nav>
</div>
`;
